--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StudentPage"></activity>
+        <activity android:name=".CompanyPage"></activity>
+        <activity android:name=".NotYetDecidedPage" />
+        <activity android:name=".StudentPage" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
