implemented apply form for student

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity android:name=".NotYetDecidedPage" />
         <activity android:name=".StudentPage" />
         <activity android:name=".NewActivity" />
+        <activity android:name=".ApplyForm" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
