--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ShowApplicationActivity"></activity>
+        <activity android:name=".CompanyShowApplicationActivity"></activity>
+        <activity android:name=".ShowApplicationActivity" />
         <activity android:name=".Posting_add_through_ccd" />
         <activity android:name=".ccdPage" />
         <activity android:name=".AddPostingFormPage" />
