--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.2.1'
     implementation 'androidx.navigation:navigation-ui:2.2.1'
     implementation 'com.google.firebase:firebase-firestore:21.4.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
 }
